tests/paczka1/fuzzy1/74365074.err
Error in line 4: cddrG S811 719,3
Error in line 2: 5Pc S955 19,5
Error in line 6: 5Pc S621 44,7
Error in line 7: 5Pc S955 97,5
Error in line 11: 5Pc S955 30,(
Error in line 10: 5Pc S57 13,1
Error in line 30: cddrG S811 8,0
Error in line 26: XfmN68p S621 91,8
